<resources>
    <string name="app_name" translatable="false">Rakabny Driver</string>
    <string name="broadcast_button_text">Broadcast My Location</string>

    <string name="loc_on_off_description" translatable="false">Location Tracking Switcher</string>
    <string name="switcher_off_label">Disabled</string>
    <string name="switcher_on_label">Enabled</string>

    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="signup">Sign Up Now</string>
    <string name="login">Login</string>
    <string name="sign_up_hint">Sign Up</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="nav_main_label">Main</string>
    <string name="nav_reservations_label">Today Reservations</string>
    <string name="nav_profile_label">Profile</string>
    <string name="nav_settings_label">Settings</string>
    <string name="nav_logout_label">Logout</string>
    <string name="signup_activity_title">Sign Up</string>
    <string name="login_activity_title">Login</string>
    <string name="bus_number_hint">Bus Number</string>
    <string name="profile_activity_title">Profile</string>
    <string name="username_label">User Name</string>
    <string name="email_label">Email</string>
    <string name="current_line_label">Current Line</string>
    <string name="manshia_asfra_line_label">Manshia : Asfra</string>
    <string name="manshia_victoria_line_label">Manshia : Victoria</string>
    <string name="manshia_mandra_line_label">Manshia : Mandra</string>
    <string name="asfra_mahta_line_label">Asfra : Mahta</string>
    <string name="mandra_mahta_line_label">Mandra : Mahta</string>
    <string name="mandra_aboker_line_label">Mandra : Aboker</string>
    <string name="line_subscription_hint_text">Changing you line subscription will make your vehicle appear to the passenger in your newly selected route</string>
    <string name="username_value_text">Ehab Hamdy</string>
    <string name="tickets_loading_error_message">Failed to load tickets.</string>
    <string name="gps_hint_message">Enabling GPS is MANDATORY</string>
    <string name="line_subscription_activity_title">Subscribe to line</string>
    <string name="line_subscription_confirmation_message">Confirmed</string>
    <string name="line_subscription_confirmation_button_text">Confirm your Change</string>
    <string name="stop_button_label">Stop</string>
    <string name="authentication_error_message">Email or Password is wrong      Authentication Failed!</string>
    <string name="account_not_verified_error_message">Account is not verified     Authentication Failed!</string>
    <string name="connection_failed_message">No Internet Connection</string>
    <string name="signup_feedback_message">Check your email inbox to verify your email and login here</string>
    <string name="connection_type_sim">SIM connection</string>
    <string name="signup_error_message">Sign Up Failed</string>
    <string name="default_line_channel" translatable="false">awesome-channel</string>
    <string name="default_email" translatable="false">ehabhamdy2012@gmail.com</string>
    <string name="notification_message_text">Your are online and your location is being sent now</string>
    <string name="notification_subtext_text" translatable="false">Warning</string>
    <string name="email_required_hint_message">Required</string>
    <string name="password_required_hint_messages">Required</string>
    <string name="progressdialog_loading_message">Loading...</string>
</resources>
